[package]
name = "dbio-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
fern = "0.6"
reqwest = {version = "0.11.10", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
ethers = { version = "0.6.2", features = ["eip712", "ledger"] }
hex = "0.4.3"
[dependencies.sqlx]
version = "0.5.11"
features = ["runtime-actix-rustls", "chrono", "postgres", "offline"]

